--- a/aaa.html
+++ b/aaa.html
@@ -8,11 +8,6 @@
     <title>Document</title>
 </head>
 <body>
-dev update other (two)
-self
-    other
-hhhhh
-    22222
-    111111
+master
 </body>
 </html>
